docs: completar README do EcoGame